# fastapi-learning

./: .env  database.db  pyproject.toml
.github/workflows/: main.yml
fast_zero/: compose.yaml
fast_zero/.github/workflows/: pipeline.yaml
fast_zero/fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/htmlcov/: class_index.html  status.json  z_4e1b63992b776aa3_users_py.html  z_9a1c41c84ecadd61___init___py.html  z_9a1c41c84ecadd61_app_py.html  z_9a1c41c84ecadd61_settings_py.html
fast_zero/migrations/versions/: 39c28158a191_create_todos_table.py  3a5edfb36173_create_users_table.py
fast_zero/routers/: auth.py  todos.py  users.py
fast_zero/tests/: test_db.py  test_security.py  test_todos.py  test_users.py
htmlcov/: function_index.html  index.html  z_4e1b63992b776aa3_auth_py.html  z_4e1b63992b776aa3_todos_py.html  z_9a1c41c84ecadd61_database_py.html  z_9a1c41c84ecadd61_models_py.html  z_9a1c41c84ecadd61_schemas_py.html  z_9a1c41c84ecadd61_security_py.html
migrations/: env.py
tests/: conftest.py  test_app.py  test_auth.py
